snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.module.sha512
bae75117fcb366a8e55660d833476527b8f94d058ccce0145f05621fd1eb5b52d3114572181139b254d75e97c3295145896fc8483cd6a97d341945fd96fd9fef